<resources>
	<string name="app_name">Visita la Slovenia HD</string>
	<string name="toast_tts_inicializado">text-to-Speech è stato inizializzato</string>
	<string name="toast_tts_error">è verificato un errore durante l\n inizializzazione Text-To-Speech engine</string>
	<string name="toast_redir">Reindirizzamento a Google Play per installare testo al motore vocale</string>
	<string name="toast_set_language">Impostazione TTS lingua a Sloveno</string>
	<string name="hola">zdravo -- Ciao</string>
	<string name="di_hola">zdravo</string>
	<string name="adios">Zbogom -- addio</string>
	<string name="di_adios">Zbogom</string>
	<string name="buenosdias">Dobro jutro -- Buongiorno</string>
	<string name="di_buenosdias">Dobro jutro</string>
	<string name="buenas_tardes">Dober večer -- buona serata</string>
	<string name="di_buenas_tardes">Dober večer</string>
	<string name="buenas_noches">Lahko noč -- Buona notte</string>
	<string name="di_buenas_noches">Lahko noč</string>
	<string name="hasta_luego">Se vidimo kasneje -- Arrivederci</string>
	<string name="di_hasta_luego">Se vidimo kasneje</string>
	<string name="hasta_manana">Se vidiva jutri -- Ci vediamo domani</string>
	<string name="di_hasta_manana">Se vidiva jutri</string>
	<string name="quetal">Kako ste? -- Come stai?</string>
	<string name="di_quetal">Kako ste?</string>
	<string name="bien_gracias">počutim se dobro -- mi sento bene</string>
	<string name="di_bien_gracias">počutim se dobro</string>
	<string name="buen_provecho">dober tek -- buon appetito</string>
	<string name="di_buen_provecho">dober tek</string>
	<string name="me_puede_ayudar">Mi lahko pomagaš? -- Mi potete aiutare?</string>
	<string name="di_me_puede_ayudar">Mi lahko pomagaš?</string>
	<string name="cuanto_cuesta">Koliko je to? -- Quanto costa?</string>
	<string name="di_cuanto_cuesta">Koliko je to?</string>
	<string name="no_hablo_espanol">Ne govorim Sloveninan -- Non parlo Sloveninan</string>
	<string name="di_no_hablo_espanol">Ne govorim Sloveninan</string>
	<string name="necesito_un_medico">rabim zdravnika -- ho bisogno di un dottore</string>
	<string name="di_necesito_un_medico">rabim zdravnika</string>
	<string name="soy_de_eeuu">Nisem iz Slovenije -- Io non sono dalla Slovenia</string>
	<string name="di_soy_de_eeuu">Nisem iz Slovenije</string>
	<string name="de_donde_eres">Kje si? -- Di dove sei?</string>
	<string name="di_de_donde_eres">Kje si?</string>
	<string name="me_llamo_paul">Moje ime je Peter -- Mi chiamo Peter</string>
	<string name="di_me_llamo_paul">Moje ime je Peter</string>
	<string name="como_se_llama">Kaj ti je ime? -- Come ti chiami?</string>
	<string name="di_como_se_llama">Kaj ti je ime?</string>
	<string name="arriba">navzgor -- su</string>
	<string name="di_arriba">navzgor</string>
	<string name="abajo">navzdol -- Giù</string>
	<string name="di_abajo">navzdol</string>
	<string name="izquierda">Levi -- Sinistra</string>
	<string name="di_izquierda">Levi</string>
	<string name="derecha">Prav -- Giusto</string>
	<string name="di_derecha">Prav</string>
	<string name="centro">Bližnji -- mezzo</string>
	<string name="di_centro">Bližnji</string>
	<string name="delante">spredaj -- Davanti</string>
	<string name="di_delante">spredaj</string>
	<string name="detras">Nazaj -- Indietro</string>
	<string name="di_detras">Nazaj</string>
	<string name="encima">Več kot -- Al di sopra di</string>
	<string name="di_encima">Več kot</string>
	<string name="debajo">Spodaj -- Sotto</string>
	<string name="di_debajo">Spodaj</string>
	<string name="lo_siento">Žal -- scusate</string>
	<string name="di_lo_siento">Žal</string>
	<string name="por_favor">Prosimo -- per favore</string>
	<string name="di_por_favor">Prosimo</string>
	<string name="gracias">Hvala vam -- Grazie</string>
	<string name="di_gracias">Hvala vam</string>
	<string name="de_nada">Ni za kaj -- Prego</string>
	<string name="di_de_nada">Ni za kaj</string>
	<string name="muchas_gracias">Najlepša hvala -- Grazie mille</string>
	<string name="di_muchas_gracias">Najlepša hvala</string>
	<string name="no_gracias">Ne, hvala -- No grazie</string>
	<string name="di_no_gracias">Ne, hvala</string>
	<string name="encantado">Lepo te je bilo srečati -- piacere di conoscerti</string>
	<string name="di_encantado">Lepo te je bilo srečati</string>
	<string name="esta_bien">To je v redu -- Va bene</string>
	<string name="di_esta_bien">To je v redu</string>
	<string name="un_cafe">Ena kava, prosim -- Un caffè, per favore</string>
	<string name="di_un_cafe">Ena kava, prosim</string>
	<string name="una_cerveza">Eno pivo prosim -- Una birra, per favore</string>
	<string name="di_una_cerveza">Eno pivo prosim</string>
	<string name="el_bano">Kje je stranišče? -- Dov\n è la toilette?</string>
	<string name="di_el_bano">Kje je stranišče?</string>
	<string name="la_carta">Ali mi lahko poveste meni, prosim? -- Potreste darmi il menu, per favore?</string>
	<string name="di_la_carta">Ali mi lahko poveste meni, prosim?</string>
	<string name="una_tortilla">Ena omleta, prosim -- Una frittata, si prega di</string>
	<string name="di_una_tortilla">Ena omleta, prosim</string>
	<string name="una_paella">Nekateri Golaz prosim -- Alcuni Golaz prega</string>
	<string name="di_una_paella">Nekateri Golaz prosim</string>
	<string name="la_cuenta">Ali mi lahko prinese račun, prosim? -- Potresti portarmi il conto, per favore?</string>
	<string name="di_la_cuenta">Ali mi lahko prinese račun, prosim?</string>
	<string name="desayuno">zajtrk -- Colazione</string>
	<string name="di_desayuno">zajtrk</string>
	<string name="comida">Kosilo -- Pranzo</string>
	<string name="di_comida">Kosilo</string>
	<string name="cena">večerja -- Cena</string>
	<string name="di_cena">večerja</string>
	<string name="cuchara">Spoon -- Cucchiaio</string>
	<string name="di_cuchara">Spoon</string>
	<string name="tenedor">vilice -- Forchetta</string>
	<string name="di_tenedor">vilice</string>
	<string name="cuchillo">nož -- Coltello</string>
	<string name="di_cuchillo">nož</string>
	<string name="pan">kruh -- Pane</string>
	<string name="di_pan">kruh</string>
	<string name="vaso">steklo -- Bicchiere</string>
	<string name="di_vaso">steklo</string>
	<string name="agua">voda -- acqua</string>
	<string name="di_agua">voda</string>
	<string name="servilleta">prtiček -- Tovagliolo</string>
	<string name="di_servilleta">prtiček</string>
	<string name="camarero">Natakar -- Cameriere</string>
	<string name="di_camarero">Natakar</string>
	<string name="me_gusta">všeč mi je -- mi piace</string>
	<string name="di_me_gusta">všeč mi je</string>
	<string name="si">Da -- sì</string>
	<string name="di_si">Da</string>
	<string name="no">Ne -- No</string>
	<string name="di_no">Ne</string>
	<string name="es_posible">Lahko bi bilo -- Potrebbe essere</string>
	<string name="di_es_posible">Lahko bi bilo</string>
	<string name="nunca">Nikoli -- Mai</string>
	<string name="di_nunca">Nikoli</string>
	<string name="siempre">Nenehno -- Sempre</string>
	<string name="di_siempre">Nenehno</string>
	<string name="a_veces">včasih -- Qualche volta</string>
	<string name="di_a_veces">včasih</string>
	<string name="hoy">danes -- Oggi</string>
	<string name="di_hoy">danes</string>
	<string name="ayer">včeraj -- Ieri</string>
	<string name="di_ayer">včeraj</string>
	<string name="manana">jutri -- Domani</string>
	<string name="di_manana">jutri</string>
	<string name="coche">avto -- Auto</string>
	<string name="di_coche">avto</string>
	<string name="avion">plane -- Aereo</string>
	<string name="di_avion">plane</string>
	<string name="tren">vlak -- Treno</string>
	<string name="di_tren">vlak</string>
	<string name="autobus">Avtobus -- Autobus</string>
	<string name="di_autobus">Avtobus</string>
	<string name="bicicleta">koles -- Bicicletta</string>
	<string name="di_bicicleta">koles</string>
	<string name="hotel">Hotel -- Hotel</string>
	<string name="di_hotel">Hotel</string>
	<string name="habitacion">soba -- Camera</string>
	<string name="di_habitacion">soba</string>
	<string name="habitacion_reservada">Sem bil nagrajen z eno sobo -- Ho prenotato una stanza</string>
	<string name="di_habitacion_reservada">Sem bil nagrajen z eno sobo</string>
	<string name="hasta_pronto">Se vidiva kmalu! -- Arrivederci!</string>
	<string name="di_hasta_pronto">Se vidiva kmalu!</string>
	<string name="Salir">Uscita</string>
	<string name="basic_data">dati di base</string>
	<string name="basic_data_text">"Dati di base \n  Superficie terreno \n  20,273 mila chilometri quadrati, di cui il 66% di boschi aree, il 28% aree agricole e il 3% dei centri abitati \n  \n Population \n 2.06m (Gen 1, 2015; Repubblica di Slovenia Ufficio di Statistica)\n  centri urbani nmain \n Population nel \n 000 (1 gennaio 2015; Repubblica di Slovenia Statistics Office) \n Ljubljana (capitale): 287,2 \n Maribor: 112,3 \n Kranj: 55.9 \n Celje: 48.8 \n Climate \n Mediterranean sulla costa, entroterra continentale \n Weather a Lubiana (altitudine 295 metri) \n Hottest mese: luglio 21 ° C; mese più freddo: gennaio, -1 ° C (media massima giornaliera e minimo); più secchi mesi: gennaio e febbraio, 75 millimetri di pioggia media; più piovoso mese: giugno 183 mm di pioggia media \n Language \n Slovene \n Weights e misure\n  system nMetric \n Currency \n Il euro (€), che ha sostituito il tallero sloveno (SIT) il 1 ° gennaio 2007 ad un tasso di cambio fisso di SIT239.64: € 1 \n time \n one ora avanti GMT; due ore avanti in estate \n Fiscal anno \n Calendar anno\n  vacanze nPublic\n  1 ° nJanuary (Capodanno ), 8 febbraio (Preseren Giorno), 16-17 aprile (giorno di Pasqua e Lunedi di Pasqua), 27 aprile (rivolta contro il day occupazione), 1-2 Maggio (Festa del Lavoro), il 25 giugno (festa nazionale), 15 agosto ( Assunzione di Maria), 31 ottobre (Festa della Riforma), 1 novembre (Giorno della Memoria), 25 dicembre (giorno di Natale), 26 dicembre (dell\n indipendenza e dell\n unità nazionale Day \n "</string>
	<string name="arrival">Come arrivare</string>
	<string name="climate">Clima</string>
	<string name="attractions">Attrazioni turistiche</string>
	<string name="bled">Lago di Bled</string>
	<string name="postoina">Postoina Grotte</string>
	<string name="triglav">Triglav</string>
	<string name="isonzo">isonzo</string>
	<string name="motorail">Motorail</string>
	<string name="piran">Piran</string>
	<string name="velika">Velika Planina</string>
	<string name="logar">Logar</string>
	<string name="vine">Vite più antica del mondo</string>
	<string name="regions">Regioni</string>
	<string name="active">Vacanze attive</string>
	<string name="biking">Bicicletta</string>
	<string name="bohinj">Lago di Bohinj</string>
	<string name="spa">pausa benessere e divertimento in acqua</string>
	<string name="map_of_slovenia">Carta geografica</string>
	<string name="vocabulario">Vocabolario</string>
	<string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
</resources>